# Game-2048-Pro-Max

./: .gitignore  CMakeLists.txt  FUTURE.md  README.md  count.py
docs/: GPT-5.2-Medium_Analysis_26-3-29-22-49.txt  GPU 算法拓展.txt  Qt Quick 可视化拓展方案.txt  ai_mode_代码作用整理.md  时间布局.txt  稀疏稠密矩阵转换策略.txt  项目拓展规划.txt  项目深度延申.txt
include/Eigen/unsupported/Eigen/CXX11/src/Tensor/: Tensor.h  TensorArgMax.h  TensorBase.h  TensorBroadcasting.h  TensorChipping.h  TensorConcatenation.h  TensorContractionBlocking.h  TensorContractionMapper.h  TensorContractionSycl.h  TensorConversion.h  TensorConvolution.h  TensorConvolutionSycl.h  TensorCostModel.h  TensorCustomOp.h  TensorDevice.h  TensorDeviceDefault.h  TensorDimensions.h  TensorEvalTo.h  TensorExecutor.h  TensorExpr.h  TensorFixedSize.h  TensorForwardDeclarations.h  TensorFunctors.h  TensorIO.h  TensorImagePatch.h  TensorIndexList.h  TensorInflation.h  TensorIntDiv.h  TensorMap.h  TensorMeta.h  TensorPatch.h  TensorRandom.h  TensorReduction.h  TensorReductionGpu.h  TensorReductionSycl.h  TensorRef.h  TensorReverse.h  TensorRoll.h  TensorScanSycl.h  TensorShuffling.h  (+4 more)
include/Eigen/unsupported/Eigen/CXX11/src/TensorSymmetry/: DynamicSymmetry.h  StaticSymmetry.h  Symmetry.h
include/Eigen/unsupported/Eigen/src/AutoDiff/: AutoDiffJacobian.h  AutoDiffScalar.h  CoherentPadOp.h
include/Eigen/unsupported/Eigen/src/BVH/: BVAlgorithms.h
include/Eigen/unsupported/Eigen/src/Eigenvalues/: ArpackSelfAdjointEigenSolver.h
include/Eigen/unsupported/Eigen/src/EulerAngles/: EulerAngles.h  EulerSystem.h
include/Eigen/unsupported/Eigen/src/FFT/: fftw_impl.h  imklfft_impl.h  kissfft_impl.h
include/Eigen/unsupported/Eigen/src/IterativeSolvers/: DGMRES.h  GMRES.h  IDRS.h  IncompleteLU.h  MINRES.h
include/Eigen/unsupported/Eigen/src/LevenbergMarquardt/: LMcovar.h  LMonestep.h  LMpar.h  LMqrsolv.h  LevenbergMarquardt.h
include/Eigen/unsupported/Eigen/src/MatrixFunctions/: MatrixExponential.h  MatrixFunction.h  MatrixLogarithm.h  MatrixPower.h  MatrixSquareRoot.h  StemFunction.h
include/Eigen/unsupported/Eigen/src/NonLinearOptimization/: chkder.h  dogleg.h  fdjac1.h  lmpar.h  r1mpyq.h  r1updt.h  rwupdt.h
include/Eigen/unsupported/Eigen/src/NumericalDiff/: NumericalDiff.h
include/Eigen/unsupported/Eigen/src/Polynomials/: Companion.h  PolynomialSolver.h  PolynomialUtils.h
include/Eigen/unsupported/Eigen/src/SparseExtra/: BlockSparseMatrix.h  MarketIO.h  MatrixMarketIterator.h  RandomSetter.h  SparseInverse.h
include/Eigen/unsupported/Eigen/src/SpecialFunctions/: BesselFunctionsArrayAPI.h  BesselFunctionsBFloat16.h  BesselFunctionsFunctors.h  BesselFunctionsHalf.h  BesselFunctionsImpl.h  BesselFunctionsPacketMath.h  HipVectorCompatibility.h  SpecialFunctionsArrayAPI.h  SpecialFunctionsFunctors.h  SpecialFunctionsHalf.h  SpecialFunctionsImpl.h  SpecialFunctionsPacketMath.h
include/Eigen/unsupported/Eigen/src/Splines/: SplineFitting.h
python/: README.md  pyproject.toml
python/game2048_dynamic/: __init__.py  api.py  loader.py
ref/: 2048Quick_技术解析.md
src/ai_mode/: ai_mode.c  ai_mode.h  board.c  board.h
src/cpp/cuda/: cuda_equal_adjacent.cu  cuda_interface.cu  cuda_move_lines.cu
src/cpp/headers/: Logic2048Base.h  basic_dependency.h  cann_interface.h  cpu_interface.h  cuda_interface.cuh  cuda_interface.h  game_2048.h  game_data_manager.h  hash_tools.h  hpc_interface.h  logic_2048_dynamic.h  logic_2048_pm.h  logic_2048_tmp.h  tmp_utility.h
src/cpp/sources/: Logic2048Base.cpp  game_2048.cpp  game_data_manager.cpp  logic_2048_dynamic.cpp  logic_2048_pm.cpp  main.cpp
src/include/Eigen/unsupported/Eigen/CXX11/src/Tensor/: TensorAssign.h  TensorBlock.h  TensorContraction.h  TensorDimensionList.h  TensorEvaluator.h  TensorFFT.h  TensorForcedEval.h  TensorGenerator.h  TensorGlobalFunctions.h  TensorInitializer.h  TensorLayoutSwap.h  TensorMorphing.h  TensorPadding.h  TensorScan.h  TensorTraits.h  TensorVolumePatch.h
src/include/Eigen/unsupported/Eigen/src/AutoDiff/: AutoDiffVector.h
src/include/Eigen/unsupported/Eigen/src/BVH/: KdBVH.h
src/include/Eigen/unsupported/Eigen/src/IterativeSolvers/: Scaling.h
src/include/Eigen/unsupported/Eigen/src/KroneckerProduct/: KroneckerTensorProduct.h
src/include/Eigen/unsupported/Eigen/src/NonLinearOptimization/: HybridNonLinearSolver.h  LevenbergMarquardt.h  covar.h  qrsolv.h
src/include/Eigen/unsupported/Eigen/src/SpecialFunctions/: SpecialFunctionsBFloat16.h
src/include/Eigen/unsupported/Eigen/src/Splines/: Spline.h  SplineFwd.h
src/qml/: Board2D.qml  Board3D.qml  GameOverDialog.qml  KeyHintWidget.qml  Main.qml  ThemeController.qml  qml.qrc
test/: ai_test.h  benchmark_logic_tensor_6d.cpp  benchmark_logic_tensor_ndim_template.cpp  cuda_basic_benchmark.cpp  get_gpu_information.cpp  random_game_test.cpp
